seed/argocd-ingress.yaml
# apiVersion: traefik.io/v1alpha1
# kind: ServersTransport
# metadata:
#   name: argocd-server-transport
#   namespace: argocd
# spec:
#   insecureSkipVerify: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:

    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/service.serversscheme: https
    # traefik.ingress.kubernetes.io/service.serverstransport: argocd-server-transport@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
